@@ -1,3 +1,15 @@
+2015-06-25  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-255
+
+	* src/absorption.{h,cc}:
+
+	Move definition of SpeciesAuxTypeNames from .h to .cc file. It's only
+	used internally. Also fixes warning from GCC about unused variable.
+
+	(SpeciesAuxData::ReadFromStream): Use explicit cast from Index to
+	Numeric in nlinspace to avoid compiler warning.
+
 2015-06-24  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-254
